temporary update of main entry

--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -11,9 +11,9 @@
                 </span>
                 </div>
                 <!-- /input-group -->
-            </li>
+        <!--    </li>
             <li>
-                <a href="pages/index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                <a href="../pages/templates/index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
@@ -25,11 +25,14 @@
                         <a href="morris.html">Morris.js Charts</a>
                     </li>
                 </ul>
-                <!-- /.nav-second-level -->
+
             </li>
+          -->
             <li>
-                <a href="tables.html"><i class="fa fa-table fa-fw"></i> Tables</a>
+                <a href="../pages/main.php"><i class="fa fa-table fa-fw"></i> Add New Entry</a>
             </li>
+
+            <!--
             <li>
                 <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
             </li>
@@ -55,7 +58,7 @@
                         <a href="grid.html">Grid</a>
                     </li>
                 </ul>
-                <!-- /.nav-second-level -->
+
             </li>
             <li>
                 <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
@@ -82,10 +85,10 @@
                                 <a href="#">Third Level Item</a>
                             </li>
                         </ul>
-                        <!-- /.nav-third-level -->
+
                     </li>
                 </ul>
-                <!-- /.nav-second-level -->
+
             </li>
             <li>
                 <a href="#"><i class="fa fa-files-o fa-fw"></i> Sample Pages<span class="fa arrow"></span></a>
@@ -97,11 +100,11 @@
                         <a href="login.html">Login Page</a>
                     </li>
                 </ul>
-                <!-- /.nav-second-level -->
+
             </li>
         </ul>
     </div>
-    <!-- /.sidebar-collapse -->
+
 </div>
-<!-- /.navbar-static-side -->
+-->
 </nav>
