--- a/pages/templates/footer.html
+++ b/pages/templates/footer.html
@@ -9,3 +9,9 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="../dist/js/sb-admin-2.js"></script>
+<script src="../dist/js/bootstrap-datepicker.js"></script>
+<script>
+  $(function(){
+    $('.datepicker').datepicker();
+  });
+  </script>
