last update of main page

--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -29,7 +29,13 @@
             </li>
           -->
             <li>
-                <a href="../pages/main.php"><i class="fa fa-table fa-fw"></i> Add New Entry</a>
+                <a href="../pages/main.php"><i class="fa fa-database fa-fw"></i> Add New Entry</a>
+            </li>
+            <li>
+                <a href="../pages/mainn.php"><i class="fa fa-credit-card fa-fw"></i> Payment By Pax</a>
+            </li>
+            <li>
+                <a href="../pages/mainn.php"><i class="fa fa-plane fa-fw"></i> Capping By Date</a>
             </li>
 
             <!--
