capping and pax front end

--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -32,10 +32,13 @@
                 <a href="../pages/main.php"><i class="fa fa-database fa-fw"></i> Add New Entry</a>
             </li>
             <li>
-                <a href="../pages/mainn.php"><i class="fa fa-credit-card fa-fw"></i> Payment By Pax</a>
+                <a href="../pages/PaymentByPax.php"><i class="fa fa-credit-card fa-fw"></i> Payment By Pax</a>
             </li>
             <li>
-                <a href="../pages/mainn.php"><i class="fa fa-plane fa-fw"></i> Capping By Date</a>
+                <a href="../pages/AirlinesCapping.php"><i class="fa fa-plane fa-fw"></i> Capping By Date</a>
+            </li>
+            <li>
+                <a href="../pages/AirlinesCapping.php"><i class="fa fa-bar-chart-o fa-fw"></i> Report</a>
             </li>
 
             <!--
