--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -10,8 +10,9 @@
                     </button>
                 </span>
                 </div>
-                <!-- /input-group -->
-        <!--    </li>
+           </li>
+            <!-- /input-group -->
+            <!--
             <li>
                 <a href="../pages/templates/index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
             </li>
@@ -27,7 +28,7 @@
                 </ul>
 
             </li>
-          -->
+            -->
             <li>
                 <a href="../pages/main.php"><i class="fa fa-database fa-fw"></i> Add New Entry</a>
             </li>
@@ -38,7 +39,7 @@
                 <a href="../pages/AirlinesCapping.php"><i class="fa fa-plane fa-fw"></i> Capping By Date</a>
             </li>
             <li>
-                <a href="../pages/AirlinesCapping.php"><i class="fa fa-bar-chart-o fa-fw"></i> Report</a>
+                <a href="../pages/Report.php"><i class="fa fa-bar-chart-o fa-fw"></i> Report</a>
             </li>
 
             <!--
@@ -111,9 +112,8 @@
                 </ul>
 
             </li>
+            -->
         </ul>
     </div>
-
 </div>
--->
-</nav>
+
