--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -30,13 +30,11 @@
             </li>
             -->
             <li>
+                <a href="../pages/Contacts.php"><i class="fa fa-group fa-fw"></i> Contacts</a>
+            </li>
+            <li>
                 <a href="../pages/main.php"><i class="fa fa-database fa-fw"></i> Add New Entry</a>
             </li>
-            <!--
-            <li>
-                <a href="../pages/PaymentByPax.php"><i class="fa fa-credit-card fa-fw"></i> Payment By Pax</a>
-            </li>
-          -->
             <li>
                 <a href="../pages/AirlinesCapping.php"><i class="fa fa-plane fa-fw"></i> Capping By Date</a>
             </li>
@@ -118,4 +116,3 @@
         </ul>
     </div>
 </div>
-
