--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -36,40 +36,36 @@
                 <a href="../pages/main.php"><i class="fa fa-database fa-fw"></i> Add New Entry</a>
             </li>
             <li>
-                <a href="../pages/AirlinesCapping.php"><i class="fa fa-plane fa-fw"></i> Capping By Date</a>
+                <a href="../pages/AirlinesCapping.php"><i class="fa fa-ticket fa-fw"></i> Capping</a>
             </li>
             <li>
-                <a href="../pages/Report.php"><i class="fa fa-bar-chart-o fa-fw"></i> Report</a>
-            </li>
-
-            <!--
-            <li>
-                <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
+                <a href="#"><i class="fa fa-plane fa-fw"></i> Flights</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-wrench fa-fw"></i> UI Elements<span class="fa arrow"></span></a>
+                <a href="#"><i class="fa fa-bell fa-fw"></i> Dues</a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-send fa-fw"></i> Airlines</a>
+            </li>
+            <li>
+                <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Report<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a href="panels-wells.html">Panels and Wells</a>
+                        <a href="../pages/Report.php">Daily statistics</a>
                     </li>
                     <li>
-                        <a href="buttons.html">Buttons</a>
+                        <a href="buttons.html">Monthly statistics</a>
                     </li>
                     <li>
-                        <a href="notifications.html">Notifications</a>
+                        <a href="icons.html"> Total Capping</a>
                     </li>
                     <li>
-                        <a href="typography.html">Typography</a>
-                    </li>
-                    <li>
-                        <a href="icons.html"> Icons</a>
-                    </li>
-                    <li>
-                        <a href="grid.html">Grid</a>
+                        <a href="grid.html">Highest pax</a>
                     </li>
                 </ul>
 
             </li>
+            <!--
             <li>
                 <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
