flights table added

--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -39,7 +39,7 @@
                 <a href="../pages/AirlinesCapping.php"><i class="fa fa-ticket fa-fw"></i> Capping</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-plane fa-fw"></i> Flights</a>
+                <a href="../pages/Flights.php"><i class="fa fa-plane fa-fw"></i> Flights</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-bell fa-fw"></i> Dues</a>
