Date wise sorting in flites

--- a/pages/templates/footer.html
+++ b/pages/templates/footer.html
@@ -11,6 +11,7 @@
 <script src="../dist/js/sb-admin-2.js"></script>
 <script src="../dist/js/DateTimePicker.js"></script>
 <script src="../dist/js/DateTimePicker-i18n.js"></script>
+<script src="../dist/js/bootstrap-datepicker.js"></script>
 <script>
   $(function(){
     $('.datepicker').datepicker();
