--- a/pages/templates/head.html
+++ b/pages/templates/head.html
@@ -20,6 +20,8 @@
     <!-- Custom CSS -->
     <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
     <link href="../dist/css/DateTimePicker.css" rel="stylesheet">
+    <link href="../dist/css/datepicker.css" rel="stylesheet">
+
 
     <!-- Custom Fonts -->
     <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
