sql file updated

--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -42,7 +42,7 @@
                 <a href="../pages/Flights.php"><i class="fa fa-plane fa-fw"></i> Flights</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-bell fa-fw"></i> Dues</a>
+                <a href="../pages/Dues.php"><i class="fa fa-bell fa-fw"></i> Dues</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-send fa-fw"></i> Airlines</a>
