--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -45,7 +45,7 @@
                 <a href="../pages/Dues.php"><i class="fa fa-bell fa-fw"></i> Dues</a>
             </li>
             <li>
-                <a href="#"><i class="fa fa-send fa-fw"></i> Airlines</a>
+                <a href="../pages/Airlines.php"><i class="fa fa-send fa-fw"></i> Airlines</a>
             </li>
             <li>
                 <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Report<span class="fa arrow"></span></a>
