--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -48,6 +48,10 @@
                 <a href="../pages/Airlines.php"><i class="fa fa-send fa-fw"></i> Airlines</a>
             </li>
             <li>
+                <a href="../pages/Report.php"><i class="fa fa-bar-chart-o fa-fw"></i> Report</a>
+            </li>
+            <!--
+            <li>
                 <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Report<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
@@ -65,6 +69,7 @@
                 </ul>
 
             </li>
+            -->
             <!--
             <li>
                 <a href="#"><i class="fa fa-sitemap fa-fw"></i> Multi-Level Dropdown<span class="fa arrow"></span></a>
