--- a/pages/templates/footer.html
+++ b/pages/templates/footer.html
@@ -12,7 +12,8 @@
 <script src="../dist/js/DateTimePicker.js"></script>
 <script src="../dist/js/DateTimePicker-i18n.js"></script>
 <script src="../dist/js/bootstrap-datepicker.js"></script>
-<script src="../dist/js/mdb.js"></script>
+<script src="../dist/js/Chart.js"></script>
+
 <script>
   $(function(){
     $('.datepicker').datepicker();
