Report And New airlines

--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -30,7 +30,15 @@
             </li>
             -->
             <li>
-                <a href="../pages/Contacts.php"><i class="fa fa-group fa-fw"></i> Contacts</a>
+                <a href="#"><i class="fa fa-group fa-fw"></i> Contacts<span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li>
+                        <a href="../pages/Contacts.php">Add New Member</a>
+                    </li>
+                    <li>
+                        <a href="../pages/NewAirline.php">Add New Airline</a>
+                    </li>
+                </ul>
             </li>
             <li>
                 <a href="../pages/main.php"><i class="fa fa-database fa-fw"></i> Add New Entry</a>
