--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -1,6 +1,7 @@
 <div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
         <ul class="nav" id="side-menu">
+            <!--
             <li class="sidebar-search">
                 <div class="input-group custom-search-form">
                     <input type="text" class="form-control" placeholder="Search...">
@@ -11,6 +12,7 @@
                 </span>
                 </div>
            </li>
+           -->
             <!-- /input-group -->
             <!--
             <li>
@@ -29,6 +31,9 @@
 
             </li>
             -->
+            <li>
+                <a href="../pages/dashboard.php"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+            </li>
             <li>
                 <a href="#"><i class="fa fa-group fa-fw"></i> Contacts<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
