show all main data with delete option data search bug solved

--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -49,6 +49,9 @@
                 <a href="../pages/main.php"><i class="fa fa-database fa-fw"></i> Add New Entry</a>
             </li>
             <li>
+                <a href="../pages/Main_Data.php"><i class="fa fa-database fa-fw"></i> All Entry's</a>
+            </li>
+            <li>
                 <a href="../pages/AirlinesCapping.php"><i class="fa fa-ticket fa-fw"></i> Capping</a>
             </li>
             <li>
