--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -38,7 +38,7 @@
                 <a href="#"><i class="fa fa-group fa-fw"></i> Contacts<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a href="../pages/Contacts.php">Add New Member</a>
+                        <a href="../pages/Contacts.php">Add New Agent</a>
                     </li>
                     <li>
                         <a href="../pages/NewAirline.php">Add New Airline</a>
@@ -46,10 +46,10 @@
                 </ul>
             </li>
             <li>
-                <a href="../pages/main.php"><i class="fa fa-database fa-fw"></i> Add New Entry</a>
+                <a href="../pages/main.php"><i class="fa fa-database fa-fw"></i> Add New Ticket</a>
             </li>
             <li>
-                <a href="../pages/Main_Data.php"><i class="fa fa-database fa-fw"></i> All Entry's</a>
+                <a href="../pages/Main_Data.php"><i class="fa fa-database fa-fw"></i> All Tickets</a>
             </li>
             <li>
                 <a href="../pages/AirlinesCapping.php"><i class="fa fa-ticket fa-fw"></i> Capping</a>
