--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -37,6 +37,9 @@
             <li>
                 <a href="#"><i class="fa fa-group fa-fw"></i> Contacts<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
+
+                    <?php include('../pages/scripts/Super_User_Access.php');  ?>
+
                     <li>
                         <a href="../pages/Contacts.php">Add New Member</a>
                     </li>
