--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -33,12 +33,12 @@
             </li>
 
             <li>
-                <a href="#"><i class="fa fa-group fa-fw"></i> Payment<span class="fa arrow"></span></a>
+                <a href="#"><i class="fa fa-bell fa-fw"></i> Payment<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
 
 
                     <li>
-                        <a href="../pages/Dues.php"><i class="fa fa-bell fa-fw"></i> Dues</a>
+                        <a href="../pages/Dues.php"> Dues</a>
                     </li>
                     <li>
                         <a href="../pages/PaymentByClient.php">Payment By Client</a>
