--- a/pages/templates/sidemenu.html
+++ b/pages/templates/sidemenu.html
@@ -33,7 +33,7 @@
             </li>
 
             <li>
-                <a href="#"><i class="fa fa-bell fa-fw"></i> Payment<span class="fa arrow"></span></a>
+                <a href="#"><i class="fa fa-money fa-fw"></i> Payment<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
 
 
@@ -49,7 +49,7 @@
                 </ul>
             </li>
             <li>
-                <a href="#"><i class="fa fa-group fa-fw"></i> History<span class="fa arrow"></span></a>
+                <a href="#"><i class="fa fa-history fa-fw"></i> History<span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
 
 
@@ -57,7 +57,7 @@
                         <a href="../pages/PaymentHistory.php">Payment History</a>
                     </li>
                     <li>
-                        <a href="../pages/Airlines.php"><i class="fa fa-send fa-fw"></i> Airlines History</a>
+                        <a href="../pages/Airlines.php"> Airlines History</a>
                     </li>
                 </ul>
             </li>
